--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,10 +36,14 @@
     <string name="title_activity_collection">CollectionActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
-    <string name="facebook_app_id">1735769100000225</string>
+    <string name="facebook_app_id">973029956116867</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
     <string name="title_activity_collections">CollectionsActivity</string>
+
+    <string name="add_image">Add Image</string>
+    <string name="title_activity_display_image">DisplayImage</string>
+    <string name="image_information">Image Information</string>
 
 </resources>
